--- a/theme/mebis/scss/moodle/_pageheader.scss
+++ b/theme/mebis/scss/moodle/_pageheader.scss
@@ -73,21 +73,26 @@
     }
 }
 
-.breadcrumb-button .singlebutton {
+.breadcrumb-button {
+    
+    margin-top: 0;
+    
+    .singlebutton {
 
-    float: left;
-    margin-left: 4px;
+        float: left;
+        margin-left: 4px;
 
-    input[type="submit"] {
-        background-color: transparent;
-        border: none;
-        color: #00a8d5 !important;
-        font-size:0.75em;
-        padding: 20px 0;
-        outline: none;
-  
-        &:hover {
-            color:#ff6600 !important;
+        input[type="submit"] {
+            background-color: transparent;
+            border: none;
+            color: #00a8d5 !important;
+            font-size:0.75em;
+            padding: 20px 0;
+            outline: none;
+
+            &:hover {
+                color:#ff6600 !important;
+            }
         }
     }
 }
